istioctl/cmd/testdata/authz/converter/policy-multiple-services.yaml
apiVersion: "rbac.istio.io/v1alpha1"
kind: ClusterRbacConfig
metadata:
  name: default
spec:
  mode: 'ON_WITH_INCLUSION'
  inclusion:
    namespaces: ["default"]
---
apiVersion: "rbac.istio.io/v1alpha1"
kind: ServiceRole
metadata:
  name: httpbin
  namespace: default
spec:
  rules:
  - services: ["prefix-*", "*-suffix"]
    methods: ["GET"]
  - services: ["prefix-*"]
    paths: ["/prefix"]
  - services: ["*-suffix"]
    paths: ["/suffix"]
  - services: ["httpbin.default.svc.cluster.local"]
    paths: ["/exact"]
---
apiVersion: "rbac.istio.io/v1alpha1"
kind: ServiceRoleBinding
metadata:
  name: binding
  namespace: default
spec:
  subjects:
  - user: "user"
  roleRef:
    kind: ServiceRole
    name: "httpbin"
